clusters/clowder/ingress/gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: ingress
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "192.168.100.210"
  listeners:
    - name: https-izzy-kiwi
      protocol: HTTPS
      port: 443
      hostname: izzy.kiwi
      tls:
        mode: Terminate
        certificateRefs:
          - name: izzy-kiwi-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-new-odin-cards
      protocol: HTTPS
      port: 443
      hostname: new.odin-cards.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: new-odin-cards-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-old-odin-cards
      protocol: HTTPS
      port: 443
      hostname: old.odin-cards.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: old-odin-cards-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-global-jam-25
      protocol: HTTPS
      port: 443
      hostname: global-jam-25.izzy.kiwi
      tls:
        mode: Terminate
        certificateRefs:
          - name: global-jam-25-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-flux-webhook
      protocol: HTTPS
      port: 443
      hostname: flux-webhook.cult-flat.izzy.kiwi
      tls:
        mode: Terminate
        certificateRefs:
          - name: flux-webhook-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-ditchcraft
      protocol: HTTPS
      port: 443
      hostname: ditchcraft.izzy.kiwi
      tls:
        mode: Terminate
        certificateRefs:
          - name: ditchcraft-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-public-certs
      protocol: HTTPS
      port: 443
      hostname: public-certs.cult-flat.izzy.kiwi
      tls:
        mode: Terminate
        certificateRefs:
          - name: public-certs-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-wellington-panorama
      protocol: HTTPS
      port: 443
      hostname: wellington-panorama.izzy.kiwi
      tls:
        mode: Terminate
        certificateRefs:
          - name: wellington-panorama-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-wellington-panorama-2
      protocol: HTTPS
      port: 443
      hostname: wellington-panorama-2.izzy.kiwi
      tls:
        mode: Terminate
        certificateRefs:
          - name: wellington-panorama-2-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-photos
      protocol: HTTPS
      port: 443
      hostname: photos.izzy.kiwi
      tls:
        mode: Terminate
        certificateRefs:
          - name: photos-izzy-kiwi-tls
      allowedRoutes:
        namespaces:
          from: All
